<resources>
    <string name="app_name">Stocks</string>
    <string name="title_home">Главная</string>
    <string name="title_news">Новости</string>
    <string name="title_portfolio">Портфолио</string>
    <string name="title_company_profile">Профиль компании</string>
    <string name="title_search">Поиск</string>
    <string name="title_add_to_portfolio">Добавить в портфель</string>
    <string name="title_add_notification">Добавить напоминание</string>
    <string name="title_toolbar_home">Рынок</string>
    <string name="title_toolbar_company">Компания</string>
    <string name="title_toolbar_news">Новости</string>
    <string name="title_toolbar_portfolio">Портфолио</string>
    <string name="title_toolbar_article">Статья</string>
    <string name="label_stock_active">Топ активных</string>
    <string name="label_stock_gainers">Лидеры роста</string>
    <string name="label_stock_losers">Лидеры падения</string>
    <string name="search_hint">Поиск…</string>
    <string name="search_error_text">Упс, кажется произошла ошибка.</string>
    <string name="quote_label_prevClose">Пред. закрытие</string>
    <string name="quote_label_open">Открытие</string>
    <string name="quote_label_dayLow">Дневной мин.</string>
    <string name="quote_label_dayHigh">Дневной макс.</string>
    <string name="quote_label_yearLow">Годовой мин.</string>
    <string name="quote_label_yearHigh">Годовой макс.</string>
    <string name="quote_label_volume">Объем</string>
    <string name="quote_label_avgVolume">Сред. объем</string>
    <string name="quote_label_marketCap">Рыночная кап.</string>
    <string name="quote_label_eps">EPS</string>
    <string name="profile_name">Название компании</string>
    <string name="profile_label_ceo">CEO</string>
    <string name="profile_ceo">CEO</string>
    <string name="profile_label_contacts">Контакты</string>
    <string name="profile_address">Адрес</string>
    <string name="profile_country">Страна</string>
    <string name="profile_phone">Телефон</string>
    <string name="profile_website">Сайт</string>
    <string name="profile_label_industry">Отрасль</string>
    <string name="profile_industry">Отрасль</string>
    <string name="profile_sector">Сектор</string>
    <string name="profile_employees">Количество сотрудников</string>
    <string name="profile_label_description">Описание</string>
    <string name="profile_description">Описание</string>
    <string name="profile_concat_address">%1$s %2$s %3$s</string>
    <string name="profile_concat_industry">Отрасль — %1$s</string>
    <string name="profile_concat_sector">Сектор — %1$s</string>
    <string name="profile_concat_employees">Число сотрудников — %1$s</string>
    <string name="marker_concat_date">Дата: %1$s</string>
    <string name="marker_concat_open">Открытие: %1$s</string>
    <string name="marker_concat_close">Закрытие: %1$s</string>
    <string name="marker_concat_low">Минимум: %1$s</string>
    <string name="marker_concat_high">Максимум: %1$s</string>
    <string name="marker_concat_volume">Объем: %1$s</string>
</resources>
